<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.beansoftph.dailyexpense.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.beansoftph.dailyexpense.MainActivity"
        tools:showIn="@layout/activity_main"
        android:layout_alignParentStart="true">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/textTitle"
    android:id="@+id/textView7"
    android:textStyle="bold"
    android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/EnterDate"
        android:hint="/MM/DD/YY/"
    android:id="@+id/textView"
    android:layout_marginTop="29dp"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/txtDate" />

<EditText
    android:id="@+id/txtDate"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="@dimen/margintop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="date|text"
    android:background="@drawable/edtstyle"
    android:textSize="@dimen/fontSize"
    android:layout_below="@+id/textView"
    android:layout_toStartOf="@+id/imgcalendar"
    android:padding="@dimen/margintop"
    android:enabled="false"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/suppliersName"
    android:layout_marginTop="@dimen/margintop"
    android:id="@+id/textView2"
    android:layout_below="@+id/txtDate"
    android:layout_alignStart="@+id/txtDate"
     />

<Spinner
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/spnSupplierName"
    android:layout_below="@+id/textView2"
    android:background="@drawable/edtstyle"
    android:layout_marginTop="@dimen/margintop"
    android:padding="@dimen/margintop"
    android:spinnerMode="dropdown"
    android:layout_alignStart="@+id/textView2"
    android:layout_alignEnd="@+id/txtSuppliersTIN"

     />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/suppliersTIN"
    android:id="@+id/textView3"
    android:layout_below="@+id/spnSupplierName"
    android:layout_alignStart="@+id/txtSuppliersTIN" />

<EditText
    android:id="@+id/txtSuppliersTIN"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:padding="@dimen/margintop"
    android:background="@drawable/edtstyle"
    android:textSize="@dimen/fontSize"
    android:layout_below="@+id/textView3"
    android:layout_marginTop="@dimen/margintop"
    android:layout_alignParentEnd="true"
    android:enabled="false" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/typeOfReceipt"
    android:id="@+id/textView4"
    android:layout_marginTop="@dimen/margintop"
    android:layout_below="@+id/txtSuppliersTIN"
    android:layout_alignStart="@+id/txtSuppliersTIN" />

        <Spinner
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/spnTypeofReceipt"
    android:background="@drawable/edtstyle"
    android:spinnerMode="dropdown"
            android:padding="@dimen/margintop"
    android:layout_below="@+id/textView4"
    android:layout_alignStart="@+id/textView4"
    android:layout_alignEnd="@+id/spnSupplierName"
    android:layout_marginTop="@dimen/margintop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Amount"
            android:id="@+id/textView5"
            android:layout_below="@+id/spnTypeofReceipt"
            android:layout_alignStart="@+id/spnTypeofReceipt" />
        <EditText
            android:id="@+id/txtAmount"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margintop"
            android:background="@drawable/edtstyle"
            android:textSize="@dimen/fontSize"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="@dimen/margintop"

            android:layout_alignParentEnd="true"
            android:inputType="number|numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/amountDesignation"
            android:id="@+id/d1"
            android:layout_below="@+id/txtAmount"
            android:layout_alignStart="@+id/txtAmount" />
        <Spinner
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/spnAmountDesignation"
            android:background="@drawable/edtstyle"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/d1"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignEnd="@+id/spnSupplierName"
            android:layout_marginTop="@dimen/margintop"
            android:padding="@dimen/margintop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/debitLabel"
            android:id="@+id/d2"
            android:layout_below="@+id/spnAmountDesignation"
            android:layout_alignStart="@+id/txtAmount"
            android:layout_alignEnd="@+id/d1" />
        <Spinner
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/spnDebitLabel"
            android:background="@drawable/edtstyle"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/d2"
            android:layout_alignStart="@+id/d2"
            android:layout_alignEnd="@+id/spnSupplierName"
            android:layout_marginTop="@dimen/margintop"
            android:padding="@dimen/margintop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/creditLabel"
            android:id="@+id/d3"
            android:layout_below="@+id/spnDebitLabel"
            android:layout_alignStart="@+id/txtAmount"
            android:layout_alignEnd="@+id/d2" />
        <Spinner
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/spnCreditLabel"
            android:background="@drawable/edtstyle"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/d3"
            android:layout_alignStart="@+id/d2"
            android:layout_alignEnd="@+id/spnSupplierName"
            android:layout_marginTop="@dimen/margintop"
            android:padding="@dimen/margintop"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpload"
            android:src="@drawable/uploadphoto"
            android:layout_below="@id/spnCreditLabel"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@id/txtAmount"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTake"
            android:src="@drawable/takephoto"
            android:layout_below="@id/btnUpload"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@id/txtAmount"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgcalendar"
            android:src="@drawable/date"
            android:layout_below="@+id/textView"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:id="@+id/imgcampreview"
            android:layout_below="@id/btnTake"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            android:src="@drawable/sendemail"
            android:layout_below="@id/imgcampreview"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@id/txtAmount"/>


    </RelativeLayout>

    </ScrollView>

</RelativeLayout>
